--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,11 @@
 root = true
 
+[*]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+max_line_length = 120
+trim_trailing_whitespace = true
+
 [*.lua]
 indent_size = 2
